--- a/database/.env
+++ b/database/.env
@@ -1,3 +1,3 @@
-DATABSE_URL="postgres://postgres:postgres@localhost/postgres"
+DATABASE_URL="postgres://postgres:postgres@localhost/postgres"
 PORT=8080
 HOST=127.0.0.1
