--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -22,3 +22,9 @@ uuid = { version = "1.4", features = ["fast-rng", "v7", "serde"] }
 thiserror = "1.0.61"
 ulid = { version = "1.1.2", features = ["uuid", "serde"] }
 derive_builder = "0.20.0"
+clap = { version = "4.5.16", features = ["derive", "env"] }
+lettre = "0.11.7"
+deadpool = "0.12.1"
+
+diesel_interaction = { path = "./diesel-interaction" }
+diesel_interaction_derive = {path = "./diesel-interaction/derive-schema"}
