--- a/database/diesel-interaction/derive-schema/Cargo.toml
+++ b/database/diesel-interaction/derive-schema/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.86"
 quote = "1.0.37"
-syn = "2.0.76"
+syn = { version = "2.0.76", features = ["full"] }
