--- a/collector/pyproject.toml
+++ b/collector/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 selenium = "^4.22.0"
 beautifulsoup4 = "^4.12.3"
+requests = "^2.32.3"
+pydantic = "^2.9.2"
 
 
 [build-system]
