--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,10 +1,6 @@
-FROM rust:1.83 AS builder
+FROM rust:1.83-alpine AS builder
 
-RUN rustup target add x86_64-unknown-linux-musl && \
-    apt update && \
-    apt install -y musl-tools musl-dev && \
-    update-ca-certificates && openssl
-
+RUN apk add openssl-dev musl-dev
 
 COPY ./Cargo.toml ./Cargo.toml
 COPY ./src ./src
@@ -20,7 +16,7 @@ RUN adduser \
     --uid 10001 \
     "ltzf-database"
 
-RUN cargo build --release --target x86_64-unknown-linux-musl
+RUN cargo build --release
 
 
 FROM scratch
