--- a/database/.env
+++ b/database/.env
@@ -1,5 +1,6 @@
 DATABASE_URL="postgres://postgres:postgres@localhost/postgres"
-SERVER_HOST="127.0.0.1"
-SERVER_PORT=8080
+LTZF_HOST="127.0.0.1"
+LTZF_PORT=8080
+RUST_LOG="debug"
 
 MAIL_SERVER="smtp.web.de"
