added primitive pdf extraction

--- a/collector/pyproject.toml
+++ b/collector/pyproject.toml
@@ -15,6 +15,7 @@ beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
 pydantic = "^2.9.2"
 openapi-client = {path = "oapicode"}
+pypdf2 = "^3.0.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7"
