--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   ltzf-db:
     build:
       context: database
-      dockerfile: database/Dockerfile
+      dockerfile: Dockerfile
     image: ltzf-db:test
     container_name: ltzf-db
     depends_on:
@@ -23,13 +23,13 @@ services:
       - 8080:8080
     environment:
       DATABASE_URL: "postgres://ltzf-user:ltzf-pass@database:5432/ltzf"
-      LTZF_HOST: "localhost"
+      LTZF_HOST: "0.0.0.0"
       LTZF_PORT: 8080
       RUST_LOG: "debug"
   collector:
     build:
       context: collector
-      dockerfile: collector/Dockerfile
+      dockerfile: Dockerfile
     image: ltzf-collector:test
     container_name: ltzf-collector
     depends_on:
@@ -37,11 +37,12 @@ services:
     networks:
       - ltzf-network
     environment:
-      - LTZF_DATABASE=http://ltzf-db:8080
+      LTZF_DATABASE: "http://ltzf-db:8080"
+  
   webserver:
     build:
       context: webserver
-      dockerfile: webserver/Dockerfile
+      dockerfile: Dockerfile
     image: ltzf-webserver:test
     container_name: ltzf-webserver
     depends_on:
@@ -51,10 +52,9 @@ services:
     ports:
       - 8081:8081
     environment:
-      - LTZFDB_HOST=ltzf-db
-      - LTZFDB_PORT=8080
-
-    
+      LTZFDB_HOST: "ltzf-db"
+      LTZFDB_PORT: 8080
+      PORT: 8081
 
 networks:
   ltzf-network:
