--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,12 +1,6 @@
 FROM rust:1.83 AS builder
 
-RUN apt install -y libpq-dev
-
-COPY ./Cargo.toml ./Cargo.toml
-COPY ./src ./src
-COPY ./oapicode ./oapicode
-COPY ./Cargo.lock ./Cargo.lock
-COPY ./migrations ./migrations
+RUN apt-get update && apt-get install -y libpq-dev && rm -rf /var/lib/apt/lists/*
 
 RUN adduser \
     --disabled-password \
@@ -16,20 +10,35 @@ RUN adduser \
     --no-create-home \
     --uid 10001 \
     "ltzf-database"
-    
-RUN cargo build --release
 
-RUN cp ./target/release/ltzusfas-db ltzf-db
+WORKDIR /app
 
-RUN rm -rf target src migrations oapicode
+COPY Cargo.toml Cargo.lock ./
 
-#FROM debian:bullseye-slim
+RUN mkdir src && \
+    echo "fn main() {}" > src/main.rs && \
+    cargo build --release && \
+    rm -rf src
 
-#RUN apt update && apt install -y libpq-dev openssl
+COPY ./src ./src
+COPY ./oapicode ./oapicode
+COPY ./migrations ./migrations
 
-#COPY --from=builder /etc/passwd /etc/passwd
-#COPY --from=builder /etc/group /etc/group
-#COPY --from=builder --chown=ltzf-database:ltzf-database /target/release/ltzusfas-db ./ltzf-database
+RUN cargo build --release && \
+    cp ./target/release/ltzusfas-db /app/ltzf-db
+
+FROM debian:bullseye-slim
+
+RUN apt-get update && \
+    apt-get install -y libpq-dev openssl && \
+    rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder /etc/passwd /etc/passwd
+COPY --from=builder /etc/group /etc/group
+
+WORKDIR /app
+
+COPY --from=builder --chown=ltzf-database:ltzf-database /app/ltzf-db ./
 
 USER ltzf-database
 
