--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,6 +1,14 @@
-FROM python:3.13-bookworm as builder
+FROM python:3.13-slim-bookworm as builder
 
-RUN pip install poetry==1.4.2
+LABEL maintainer="Benedikt Schäfer"
+LABEL description="Webserver for the LTZF"
+LABEL version="0.1"
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install --no-cache-dir poetry==1.4.2
 
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
@@ -17,17 +25,33 @@ RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry install --without dev --n
 
 FROM python:3.13-slim-bookworm as runtime
 
-RUN apt update && apt install -y python3 wget
-RUN wget "https://github.com/barnumbirr/zola-debian/releases/download/v0.19.2-1/zola_0.19.2-1_amd64_bookworm.deb"
-RUN dpkg -i "zola_0.19.2-1_amd64_bookworm.deb" 
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+RUN apt-get update && apt-get install -y --no-install-recommends wget \
+    && wget "https://github.com/barnumbirr/zola-debian/releases/download/v0.19.2-1/zola_0.19.2-1_amd64_bookworm.deb" \
+    && dpkg -i "zola_0.19.2-1_amd64_bookworm.deb" \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm "zola_0.19.2-1_amd64_bookworm.deb"
 
 ENV VIRTUAL_ENV=/app/.venv \
     PATH="/app/.venv/bin:$PATH"
 
+WORKDIR /app
+
 COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 
-COPY webserver ./webserver
-COPY zolasite zolasite
-COPY ./oapicode ./oapicode
+COPY webserver /app/webserver
+COPY zolasite /app/zolasite
+COPY ./oapicode /app/oapicode
+
+RUN chown -R appuser:appuser /app
+USER appuser
+
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health || exit 1
+
+EXPOSE 8000
+EXPOSE 80
 
 ENTRYPOINT ["python", "-m", "webserver.main"]
