--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:3.13-slim-bookworm as builder
+FROM oapi-preimage AS oapifile
+FROM python:3.13-slim-bookworm AS builder
 
 LABEL maintainer="Benedikt Schäfer"
 LABEL description="Webserver for the LTZF"
 LABEL version="0.1"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
+    gcc maven jq \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir poetry==1.4.2
@@ -17,13 +18,14 @@ ENV POETRY_NO_INTERACTION=1 \
 
 WORKDIR /app
 
+COPY --from=oapifile /app/oapicode-python ./oapicode
+
 COPY pyproject.toml poetry.lock ./
-COPY ./oapicode ./oapicode
 RUN touch README.md
 
 RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry install --without dev --no-root
 
-FROM python:3.13-slim-bookworm as runtime
+FROM python:3.13-slim-bookworm AS runtime
 
 RUN groupadd -r appuser && useradd -r -g appuser appuser
 
@@ -43,7 +45,7 @@ COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
 
 COPY webserver /app/webserver
 COPY zolasite /app/zolasite
-COPY ./oapicode /app/oapicode
+COPY --from=oapifile /app/oapicode-python ./oapicode
 
 RUN chown -R appuser:appuser /app
 USER appuser
