--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,6 +1,8 @@
+FROM oapi-preimage AS oapifile
+
 FROM rust:1.83 AS builder
 
-RUN apt-get update && apt-get install -y libpq-dev && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends libpq-dev && rm -rf /var/lib/apt/lists/*
 
 RUN adduser \
     --disabled-password \
@@ -14,23 +16,22 @@ RUN adduser \
 WORKDIR /app
 
 COPY Cargo.toml Cargo.lock ./
+COPY --from=oapifile /app/oapicode-rust ./oapicode
 
-RUN mkdir src && \
-    echo "fn main() {}" > src/main.rs && \
-    cargo build --release && \
-    rm -rf src
+# RUN mkdir src && \
+#     echo "fn main() {}" > src/main.rs && \
+#     cargo build --release && \
+#     rm -rf src
 
 COPY ./src ./src
-COPY ./oapicode ./oapicode
 COPY ./migrations ./migrations
 
-RUN cargo build --release && \
-    cp ./target/release/ltzusfas-db /app/ltzf-db
+RUN cargo build --release
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 RUN apt-get update && \
-    apt-get install -y libpq-dev openssl && \
+    apt-get install -y libpq-dev libssl-dev && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /etc/passwd /etc/passwd
@@ -38,9 +39,9 @@ COPY --from=builder /etc/group /etc/group
 
 WORKDIR /app
 
-COPY --from=builder --chown=ltzf-database:ltzf-database /app/ltzf-db ./
+COPY --from=builder --chown=ltzf-database:ltzf-database /app/target/release/ltzusfas-db ./
+RUN chmod +x ./ltzusfas-db
 
 USER ltzf-database
 
-ENTRYPOINT ["./ltzf-db"]
-
+ENTRYPOINT ["/app/ltzusfas-db"]
