--- a/collector/pyproject.toml
+++ b/collector/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^2.9.2"
 openapi-client = {path = "oapicode"}
 pypdf2 = "^3.0.1"
 aiohttp = "^3.11.10"
+redis = "^5.2.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7"
