--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -5,11 +5,7 @@ LABEL maintainer="Benedikt Schäfer"
 LABEL description="Webserver for the LTZF"
 LABEL version="0.1"
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc maven jq \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --no-cache-dir poetry==1.4.2
+RUN pip install poetry==1.4.2
 
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
@@ -21,7 +17,6 @@ WORKDIR /app
 COPY --from=oapifile /app/oapicode-python ./oapicode
 
 COPY pyproject.toml poetry.lock ./
-RUN touch README.md
 
 RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry install --without dev --no-root
 
@@ -42,16 +37,16 @@ ENV VIRTUAL_ENV=/app/.venv \
 WORKDIR /app
 
 COPY --from=builder ${VIRTUAL_ENV} ${VIRTUAL_ENV}
+COPY --from=oapifile /app/oapicode-python ./oapicode
+COPY zolasite /app/zolasite
 
 COPY webserver /app/webserver
-COPY zolasite /app/zolasite
-COPY --from=oapifile /app/oapicode-python ./oapicode
 
 RUN chown -R appuser:appuser /app
 USER appuser
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health || exit 1
+    CMD curl -f "http://localhost:80" || exit 1
 
 EXPOSE 8000
 EXPOSE 80
