--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,7 +2,7 @@ FROM oapi-preimage AS oapifile
 
 FROM rust:1.83 AS builder
 
-RUN apt-get update && apt-get install -y --no-install-recommends libpq-dev && rm -rf /var/lib/apt/lists/*
+RUN apt update && apt install -y --no-install-recommends libpq-dev && rm -rf /var/lib/apt/lists/*
 
 RUN adduser \
     --disabled-password \
@@ -28,24 +28,21 @@ COPY ./migrations ./migrations
 
 RUN touch src/main.rs && cargo build --release
 
-FROM debian:bookworm-slim
-
-RUN apt-get update && \
-    apt-get install -y libpq-dev libssl-dev && \
-    rm -rf /var/lib/apt/lists/*
+FROM debian:bookworm-slim AS runner
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-CMD curl -f "http://localhost:80" || exit 1
+            CMD curl -f "http://localhost:80" || exit 1
+
+
+RUN apt update \
+&&  apt install -y --no-install-recommends libpq5 \
+&&  rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
+COPY --from=builder --chmod=+x --chown=ltzf-database:ltzf-database /app/target/release/ltzusfas-db /app/ltzusfas-db
 
 WORKDIR /app
 
-COPY --from=builder --chown=ltzf-database:ltzf-database /app/target/release/ltzusfas-db ./
-
-RUN chmod +x ./ltzusfas-db
-
 USER ltzf-database
-
 ENTRYPOINT ["/app/ltzusfas-db"]
