--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     image: redis:latest
     container_name: redis
     restart: unless-stopped
+    ports:
+      - 6379:6379
     networks:
       - ltzf-network
     environment:
