--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       REDIS_HOST: "redis"
       API_OBJ_LOG: "locallogs"
       API_KEY: "tegernsee-apfelsaft-co2grenzwert"
+      OPENAI_API_KEY: "examplesecret"
 
   
   webserver:
