--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -32,3 +32,4 @@ dotenv = "0.15.0"
 snafu = "0.8.5"
 openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
 sha256 = "1.5.0"
+rand = "0.8.5"
