--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -34,3 +34,6 @@ openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
 sha256 = "1.5.0"
 rand = "0.8.5"
 futures = "0.3.31"
+
+[dev-dependencies]
+similar = "2.7.0"
