--- a/collector/.env
+++ b/collector/.env
@@ -1,7 +1,6 @@
-LTZFDB_URL="http://localhost:8000"
-API_KEY="aasldkjfaölsdikjf!"
+LTZFDB_URL="http://localhost:8080"
+API_KEY="tegernsee-apfelsaft-co2grenzwert"
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 TROJAN_THRESHOLD="5"
 API_OBJ_LOG="locallogs"
-LOCAL_LLM_URL="http://localhost:4000"
