fixed taking the header key instead of value

--- a/collector/.env
+++ b/collector/.env
@@ -1,6 +1,6 @@
-LTZFDB_URL="http://localhost:8080"
-API_KEY="tegernsee-apfelsaft-co2grenzwert"
-REDIS_HOST="localhost"
-REDIS_PORT="6379"
-TROJAN_THRESHOLD="5"
-API_OBJ_LOG="locallogs"
+export LTZF_DATABASE="http://localhost:8080"
+export API_KEY="tegernsee-apfelsaft-co2grenzwert"
+export REDIS_HOST="localhost"
+export REDIS_PORT="6379"
+export TROJAN_THRESHOLD="5"
+export API_OBJ_LOG="locallogs"
