--- a/database/.env
+++ b/database/.env
@@ -1,6 +1,7 @@
-DATABASE_URL="postgres://postgres:postgres@localhost/postgres"
-LTZF_HOST="127.0.0.1"
-LTZF_PORT=8080
-RUST_LOG="debug"
+export DATABASE_URL="postgres://ltzf-user:ltzf-pass@localhost:5432/ltzf"
+export LTZF_HOST="127.0.0.1"
+export LTZF_PORT=8080
+export RUST_LOG="trace"
+export LTZF_KEYADDER_KEY="tegernsee-apfelsaft-co2grenzwert"
 
-MAIL_SERVER="smtp.web.de"
+export MAIL_SERVER="smtp.web.de"
