--- a/webserver/zolasite/content/pagestate.toml
+++ b/webserver/zolasite/content/pagestate.toml
@@ -1,3 +1,3 @@
-beratung = [ "a3f1ba9d-49c9-4e01-9193-c972e7296852", "819854ca-b753-401e-8e28-850563b3436e",]
-nachbereitung = [ "b3bd5bfd-5a3c-4a2a-90c5-fc119e603bb7",]
+beratung = []
+nachbereitung = []
 vorbereitung = []
