--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -27,17 +27,14 @@ lettre = "0.11.7"
 deadpool = "0.12.1"
 
 strum = { version = "0.26.3", features = ["derive"] }
-axum-extra = "0.9.6"
+axum-extra = {version = "0.9.6", features= ["cookie"]}
 dotenv = "0.15.0"
 snafu = "0.8.5"
-openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
 sha256 = "1.5.0"
 rand = "0.8.5"
 futures = "0.3.31"
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
+openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
 
 [dev-dependencies]
 similar = "2.7.0"
-
-[profile.dev.package.sqlx-macros]
-opt-level = 3
