--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - ltzf-network
     environment:
       DATABASE_URL: "postgres://ltzf-user:ltzf-pass@database:5432/ltzf" # required
-      RUST_LOG: "trace"                                                 # optional
+      RUST_LOG: "info"                                                 # optional
       LTZF_KEYADDER_KEY: "tegernsee-apfelsaft-co2grenzwert"             # required
 
   collector:
