fixed station->document retrieval switchup

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -40,10 +40,10 @@ RUN apt update \
 
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
-COPY --from=builder --chmod=0100 --chown=ltzf-database:ltzf-database /app/target/release/ltzusfas-db /app/ltzusfas-db
+COPY --from=builder --chmod=0100 --chown=ltzf-database:ltzf-database /app/target/release/ltzf-db /app/ltzf-db
 
 WORKDIR /app
 
 USER ltzf-database
 
-ENTRYPOINT ["./ltzusfas-db"]
+ENTRYPOINT ["./ltzf-db"]
