--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -30,6 +30,8 @@ rand = "0.8.5"
 futures = "0.3.31"
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
 openapi = { version = "0.1.0", path = "oapicode", features = ["server"] }
+tower-http = { version = "0.6.2", features = ["limit"] }
+axum_gcra = "0.1.1"
 
 [dev-dependencies]
 similar = "2.7.0"
