--- a/collector/pyproject.toml
+++ b/collector/pyproject.toml
@@ -17,6 +17,7 @@ litellm = "^1.57.4"
 pytest-asyncio = "^0.25.2"
 pypdf = "^5.1.0"
 openapi-client = {path = "oapicode"}
+jsondiff = "^2.2.1"
 
 [build-system]
 requires = ["poetry-core"]
