more specific semantic extraction & fixes to spec inconsistency

--- a/collector/pyproject.toml
+++ b/collector/pyproject.toml
@@ -20,6 +20,9 @@ openapi-client = {path = "oapicode"}
 jsondiff = "^2.2.1"
 kreuzberg = "^3.0.1"
 
+[tool.poetry.group.dev.dependencies]
+toml = "^0.10.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
