--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Parallel Tests
+name: Testing the LTZF Project
 
 on: [push, pull_request]
 
@@ -38,10 +38,10 @@ jobs:
         run: cargo test
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/test_db
+          SQLX_OFFLINE: true
 
   collector_tests:
     runs-on: ubuntu-latest
-    needs: database_tests  # Remove if tests should run in parallel
     
     steps:
       - uses: actions/checkout@v4
