added black to webserver

--- a/webserver/pyproject.toml
+++ b/webserver/pyproject.toml
@@ -16,6 +16,9 @@ openapi-client = {path = "./oapicode"}
 toml = "^0.10.2"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
