branched out collector

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ltzf-backend"]
 	path = ltzf-backend
 	url = git@github.com:Chrystalkey/ltzf-backend.git
+[submodule "ltzf-collector"]
+	path = ltzf-collector
+	url = git@github.com:Chrystalkey/ltzf-collector.git
