--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Specification Validation and Documentation
 
-on: [push]
+on: 
+  push:
+    paths:
+      - openapi.yaml
 env: 
     OPENAPI_GENERATOR_VERSION: "7.12.0"
 jobs:
@@ -9,7 +12,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: install prerequisites
-              run: apt update && apt install -y --no-install-recommends maven jq curl
+              run: sudo apt update && sudo apt install -y --no-install-recommends maven jq curl
             - name: install openapi generator
               run: curl https://raw.githubusercontent.com/OpenAPITools/openapi-generator/master/bin/utils/openapi-generator-cli.sh > openapi-generator-cli && chmod u+x openapi-generator-cli
             - name: validate
