--- a/Dockerfile.oapi
+++ b/Dockerfile.oapi
@@ -3,8 +3,8 @@ FROM debian:bookworm-slim
 LABEL maintainer="Benedikt Schäfer"
 LABEL description="Pre-Image that generates openapi code from scratch every time the spec changes"
 LABEL version="0.1.1"
-ENV OPENAPI_GENERATOR_VERSION="7.13.0"
-RUN apt update && apt install -y --no-install-recommends maven jq curl \
+ENV OPENAPI_GENERATOR_VERSION="7.14.0"
+RUN apt update && apt install -y --no-install-recommends maven jq curl ripgrep \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir /app \
     && curl "https://raw.githubusercontent.com/OpenAPITools/openapi-generator/master/bin/utils/openapi-generator-cli.sh" > /app/openapi-generator-cli \
