added new ltzf-backend version 0.2.6 & docker compose file using the deploy file by default

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
   ltzf-db:
     build:
       context: ltzf-backend
+      dockerfile: Dockerfile.deploy
       network: host
     image: ltzf-db:test
     container_name: ltzf-db
